实现选中文件的注解导出